Update notebook with missing cells

--- a/01_Basics_and_States.ipynb
+++ b/01_Basics_and_States.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "6b2773ec",
    "metadata": {},
    "outputs": [
@@ -1105,17 +1105,116 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a466c885",
+   "metadata": {},
+   "source": [
+    "The state is $|3\\rangle$, so when the particle number is measured using the number operator $\\hat{n}$, the expectation value (and, in this case, the only possible measurement outcome) is exactly $3.0$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "01cf411f",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Problem 22: Expectation Values for a List of States\n",
+    "\n",
+    "**System:** A five-level quantum system.\n",
+    "\n",
+    "**Tasks:**\n",
+    "\n",
+    "1. **State List:** Create a list of the first five Fock states, from $|0\\rangle$ to $|4\\rangle$, in a 5-level system. \n",
+    "\n",
+    "2. **Number Operator:** Create the number operator $\\hat{n} = \\texttt{num(5)}$.\n",
+    "\n",
+    "3. **Expectation Values:** Calculate the expectation value of $\\hat{n}$ for the list of states.\n",
+    "\n",
+    "4. **Output:** Print the resulting list of expectation values.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cd27593f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2. 3. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "states = [basis(5,i) for i in range (5)]\n",
+    "n = num(5)\n",
+    "print(expect(n,states))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c1fd9e",
+   "metadata": {},
+   "source": [
+    "When you run `print(expect(n, states))`, QuTiP automatically computes the expectation value of the operator for each state in the list and returns a list of results. In this case, the output is `[0. 1. 2. 3. 4.]`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1525b5b3",
+   "metadata": {},
+   "source": [
+    "## Problem 23: The Harmonic Superposition\n",
+    "\n",
+    "**System:** A 10-level Harmonic Oscillator ($N=10$).\n",
+    "\n",
+    "**Tasks:**\n",
+    "\n",
+    "1.  **Create the State:** Create an *unnormalized* superposition state `psi` that is the sum of the first excited state $|1\\rangle$ and the third excited state $|3\\rangle$.\n",
+    "2.  **Normalize:** Create a normalized version of this state called `psi_norm`.\n",
+    "3.  **Operator:** Create the **number operator** $\\hat{n}$ for this system.\n",
+    "4.  **Expectation:** Calculate the **expectation value** of $\\hat{n}$ for your normalized state `psi_norm`.\n",
+    "    * *Mental Check:* Since it's an equal mix of $|1\\rangle$ and $|3\\rangle$, what should the average be?\n",
+    "5.  **Density Matrix:** Create the density matrix `rho` corresponding to `psi_norm` and check if it is Hermitian using the `.isherm` attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a88acc45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expectation Value: 1.9999999999999996\n",
+      "Is Hermitian? True\n",
+      "Quantum object: dims=[[10], [10]], shape=(10, 10), type='oper', dtype=CSR, isherm=True\n",
+      "Qobj data =\n",
+      "[[0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.5 0.  0.5 0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.5 0.  0.5 0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0.  0.  0.  0.  0.  0.  0. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "psi = basis(10,1)+basis(10,3)\n",
+    "psi_norm = psi.unit()\n",
+    "n = num(10)\n",
+    "expectation = expect(n,psi_norm)\n",
+    "print(f\"Expectation Value: {expectation}\")\n",
+    "rho = psi_norm * psi_norm.dag()\n",
+    "print(f\"Is Hermitian? {rho.isherm}\")\n",
+    "print(rho)"
+   ]
   }
  ],
  "metadata": {
